# docs/swagger.json
@@ -30,7 +30,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "authentication"
                 ],
                 "summary": "User login",
                 "parameters": [
@@ -84,7 +84,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "userProfile"
                 ],
                 "summary": "Get current user profile",
                 "responses": {
@@ -121,7 +121,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "userManagement"
                 ],
                 "summary": "List users",
                 "parameters": [
@@ -170,7 +170,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "userManagement"
                 ],
                 "summary": "Create a new user",
                 "parameters": [
@@ -227,7 +227,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "userManagement"
                 ],
                 "summary": "Get user by ID",
                 "parameters": [
@@ -280,7 +280,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "userManagement"
                 ],
                 "summary": "Update user",
                 "parameters": [
@@ -351,7 +351,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "userManagement"
                 ],
                 "summary": "Delete user",
                 "parameters": [
@@ -403,7 +403,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "userManagement"
                 ],
                 "summary": "Change user status",
                 "parameters": [
@@ -468,7 +468,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "api"
+                    "version"
                 ],
                 "summary": "Get API version",
                 "responses": {
